_sass/base.scss
/* ... */
/*
Not in use anymore:
.designProcessContainer {
    display: flex;
    flex-flow: row wrap;  
    list-style: none;
    justify-content: center;
    align-items: center;
    //gap: 1%;
    margin: 0rem 5% 2rem;

  .designProcessItem {
      //background-color: $accent1;
      font-size: $fontSize * 1.25;
      padding: 1rem 1.5rem;
      margin: 1.25rem;
      border-radius: 1.5rem;
      text-decoration: none;
      color: $background;
      max-width: 33%;
      min-width: 275px;
      text-align: center;
      flex-basis: 0%;
      
      h2 {
        font-weight: bold;
        font-size: $fontSize * 2;
        color: $background;
        margin-bottom: 0.5rem;
      }

      p {
        font-style: italic;
      }

      strong {
        color: $background;
      }
    }
}
*/

@keyframes shake {
  0% { transform: rotate(0deg); }
  25% { transform: rotate(5deg); }
  50% { transform: rotate(0eg); }
  75% { transform: rotate(-5deg); }
  100% { transform: rotate(0deg); }
}

.shake {
  animation: shake 0.3s;
}

.secret {
  font-style: italic;
  text-align: center;
  margin: 0 5% 3rem;
  font-size: $fontSize * 1.5;

  #exampleCustomizable {
    @include clickable();
    background-color: $accent2;
    font-style: normal;
    font-weight: bold;
    color: $body;
    box-decoration-break: clone;
    -webkit-box-decoration-break: clone;
  }
}

footer {
  background-color: $body;
  color: $background;
  text-align: center;
  padding: 1.25rem;
  margin-top: 0.5rem 0;

  ul {
    display: flex;
    list-style: none;
  }

  a {
    @include clickable;      
    &:hover {
      background-color: $accent1;
    }
  }

  p {
    font-style: italic;
  }
}

#backToTop {
  display: none;
  margin-bottom: 1.5rem;
  font-size: $fontSize * 1.5;
}

#bottomLinks {
  display: none;
  justify-content: center;
  font-size: $fontSize * 1.5;
  gap: 1%;
  margin-bottom: 1rem;
}

.hidden
{
    display: none !important;
}

// Art page photo gallery stuff
.gallery {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  margin: 0.5rem 5%;
}

.gallery-item {
  overflow: hidden;
  border-radius: 12px;
  cursor: zoom-in;
  aspect-ratio: 1 / 1;
  transition: transform 0.2s ease;
  padding: 5%;
  box-sizing: border-box;
  
  &:hover {
    transform: scale(1.05);
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
  }

  figcaption {
    display: none;
  }
}

.wide {
  grid-column: span 2;
  aspect-ratio: 2 / 1;
}

.tall {
  grid-row: span 2;
  aspect-ratio: 1 / 2;
}

.large {
  grid-column: span 2;
  grid-row: span 2;
  aspect-ratio: 1 / 1;
}

  // Lightbox 
.lightbox {
  position: fixed;
  inset: 0;
  background: rgba(0,0,0,0.9);
  display: none;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  cursor: pointer;

  img {
    max-width: 80vw;
    max-height: 80vh;
    object-fit: contain;
  }

  figcaption {
    color: $background;
    font-size: $fontSize * 1.5;
    margin: 1.25rem 5% 0rem;
    text-align: center;
  }
}

.lightbox.active {
  display: flex;
  flex-direction: column;
}



//
// Mobile & 4K Responsiveness
//

.notOnMobile {
  display:block;
}

.onlyOnMobile{
  display: none;
}

.onlyOnSmallestMobile{
  display: none;
}

// Giant monitors
@media screen and (min-width: 2000px) {
  html {
    font-size: 1.25rem;
  }

  .designProcessItem {
    flex-basis: 100%;
  }
}

// phones & tablets
@media screen and (max-width: 1100px) {
  .notOnMobile{
    display: none;
  }

  .onlyOnMobile{
    display: block;
  }
  
  nav {
    justify-content: center;

    ul:not(:first-child) {
      display: none;
    }

    li:not(.title, .hamburger, .hamburgerLink) {
      display: none;
    }

    .hamburger {
      display: block;
    }

    .title {
      font-size: $fontSize * 1;
      min-width: 12rem;
    }
  }

  .topPadding {
    padding-top: 4rem;
  }

  .homePageGames {
    //flex-direction: column;

    .game {
      min-width: 200px;
      max-width: 100%;
      margin: 1rem 0;

      
      .hoverfilter {
        filter: none;
      }
    }
  }

  .titleContainer {
    flex-direction: column;
    gap: 0;
    
    .playButton {
      margin-bottom: 1rem;
    }
  }

  .gamesContainer {
    flex-direction: column;

    .item {
      min-width: 100%;
      margin: 1rem 0;
    }

    .gameAsset {
      max-width: 100%;
      margin: 1rem 0;
    }
  }

  .aboutMe {
    flex-direction: column;
    justify-content: center;
    padding: 0;

    .aboutMeItem {
      max-width: 85%;
    }

    .designProcessContainer {
      align-content: center;
    }
  }

  footer p {
    margin-top: 0.75rem;
  }

  #backToTop {
    display: block;
  }

  #bottomLinks {
    display: flex;
  }
}

@media screen and (max-width: 500px) {
  .onlyOnSmallestMobile {
  display: block;
  }

  h2 .homePageName {
    font-size: $fontSize * 2.5;
  }

  .homePageGames {
    .game {
      min-width: 100px;
      max-width: inherit;
    }

    figcaption {
      //font-size: $fontSize * 1.25;
      white-space: normal;
    }
  }

  .aboutMe {
    .aboutMeItem {
      max-width: 75%;
    }
  }

  .titleContainer {
    .gameTitle {
      font-size: $fontSize * 3;
    }
  }

  // For Gallery in Art page
  .gallery {
    display: flex;
    flex-direction: column;
    
    .wide, .tall, .large {
      grid-column: span 1;
      grid-row: span 1;
    }

    .gallery-item {
      min-width: 90%;
      max-height: 400px;

      &:hover {
        transform: none;
      }
    }
  }
}

